# American-Option-Early-Assignment-Exercise

./: CMakeLists.txt  README.md
docs/: worksheet.md
include/: BinomialPricer.hpp  OptionTypes.hpp
src/: BinomialPricer.cpp  main.cpp
tests/: test_binomial.cpp
